# geographer

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  AuxiliaryFunctions.h  CMakeLists.txt  CMakeLists_example.txt  Diffusion.cpp  Diffusion.h  DiffusionTest.cpp  Dockerfile  FileIO.cpp  FileIO.h  FileIOTest.cpp  GeographerConfig.cmake.in  GraphUtils.cpp  GraphUtils.h  GraphUtilsTest.cpp  Grid16x16  Grid32x32  Grid32x32.xyz  Grid64x64  Grid64x64.xyz  HilbertCurve.cpp  HilbertCurve.h  HilbertCurveNew.cpp  HilbertCurveTest.cpp  HilbertCurveTestNew.cpp  IO.cpp  IO.h  IOTest.cpp  KMeans.cpp  KMeans.h  KMeansTest.cpp  Kampyli  LocalRefinement.cpp  LocalRefinement.h  LocalRefinementTest.cpp  MY_Grid16x16  (+89 more)
CmakeModules/: CodeCoverage.cmake
Notes/: bit_label_refinement.tex  contributorGuide.tex  example_cmake_call.txt  geo_ContributorGuide.tex  hierarchical_kmeans.tex  implementationsIdeas.tex  multisection_revisited.tex
delaunaGen/: CMakeLists.txt  generate_dt.cpp  generate_dt_binary.cpp
doc/: doxConfigFile
experiments/: SaGa.config  Test-Run-Script-competitors-Supermuc.py  header.py  sagaCheckMissingFiles.py  sagaGather.py  sagaPlotInterExp.py  sagaSingleRun.py  sagaSubmit.py  saga_SingleRun.py  submitFileWrapper_Supermuc.py  test_GatherScript.py  test_GatherScriptForTool.py  test_SubmitScript.py
figures/: graph.ipe  graph_partitioned.ipe  graph_partitioned_with_PE_block_graph.ipe  grid8x8.ipe  hier_tree_system.ipe  local_search_PU_dist.ipe  vector_dist.ipe
meshes/: 353off.graph  353off.graph.xyz  Grid16x16.bfg  Grid16x16.xyz  Grid16x16_parallel.xyz  Grid32x32_parallel.xyz  Grid4x4  Grid4x4.xyz  Grid8x8  Grid8x8.bgf  Grid8x8.xyz  Grid8x8_parallel.xyz  MY_slowrot-00000.graph  bubbles-00010.at  bubbles-00010.graph  bubbles-00010.graph.xyz  bubbles-00010.graph_parallel.xyz  delaunay-3D-12.edgelist  delaunay-3D-12.xyz  delaunayTest.bgf  delaunayTest.bgf.xyz  delaunayTest.graph  delaunayTest.graph.xyz  delaunayTest.graph_parallel.xyz  node2d_core2.out  rotation-00000.graph  rotation-00000.graph.xyz  slowrot-00000.graph  slowrot-00000.graph.xyz  trace-00008.at  trace-00008.bfc  trace-00008.bgf  trace-00008.graph  trace-00008.graph.xyz  whitaker3_coord.mtx
meshes/PEgraphs/: myPEgraph8.txt
meshes/processorTrees/: cpu_88_33_10.cfg  testPEgraph28.txt  testPEgraph46.txt  testPEgraph8.txt
meshes/tmp4/: out0  out1  out2  out3
publication_results/: README.md
publication_results/hipc2020/: README.md  experiments_hipc_arcade.yml
publication_results/hipc2020/bSizesFiles/: bSizes_p96_fp16_fs10_fm20_sk2.txt  bSizes_p96_fp16_fs160_fm138_sk1.txt  bSizes_p96_fp16_fs160_fm138_sk2.txt  bSizes_p96_fp16_fs20_fm32_sk1.txt  bSizes_p96_fp16_fs20_fm32_sk2.txt  bSizes_p96_fp16_fs40_fm52_sk1.txt  bSizes_p96_fp16_fs40_fm52_sk2.txt  bSizes_p96_fp16_fs80_fm85_sk1.txt  bSizes_p96_fp16_fs80_fm85_sk2.txt  bSizes_p96_fp8_fs10_fm20_sk1.txt  bSizes_p96_fp8_fs10_fm20_sk2.txt  bSizes_p96_fp8_fs160_fm138_sk1.txt  bSizes_p96_fp8_fs160_fm138_sk2.txt  bSizes_p96_fp8_fs20_fm32_sk1.txt  bSizes_p96_fp8_fs20_fm32_sk2.txt  bSizes_p96_fp8_fs40_fm52_sk1.txt  bSizes_p96_fp8_fs40_fm52_sk2.txt  bSizes_p96_fp8_fs80_fm85_sk1.txt  bSizes_p96_fp8_fs80_fm85_sk2.txt
quadtree/: KDNodeEuclidean.h  KDTreeEuclidean.h  Point.h  QuadNodeCartesianEuclid.h  QuadNodePolarEuclid.h  QuadTreeCartesianEuclid.h  QuadTreePolarEuclid.h  SpatialCell.h  SpatialTree.h
quadtree/test/: QuadTreeTest.cpp  QuadTreeTest.h
schizoQuicksort/: .gitignore  LICENSE  README.md  makefile
schizoQuicksort/Plots/: Pivots.txt  Results.txt  ResultsQS.txt  ResultsQS_all.txt  ResultsQS_juqueen.txt  ResultsQS_muc.txt  Results_juqueen.txt  Results_new.txt  benchmarks.tex  compare_juqueen.tex  minmax.tex  pivots.tex  quicksort.tex  quicksort_juqueen.tex  quicksort_muc.tex  schizo_hcq_juqueen.txt
schizoQuicksort/juqueen/: makefile
schizoQuicksort/juqueen/SchizoQS_vs_HypercubeQS/: config01024S.json  config04096HC.json  config08192HC.json  config08192S.json  config16384HC.json  config16384S.json  run00512.js  run01024.js  run04096.js  run08192.js  run16384.js
schizoQuicksort/juqueen/benchmark/: Benchmark.txt  Benchmark1024cores.cmd  Benchmark16384cores.cmd  Benchmark2048cores.cmd  Benchmark32768cores.cmd  Benchmark4096cores.cmd  Benchmark512cores.cmd  Benchmark8192cores.cmd
schizoQuicksort/juqueen/quicksort/: Quicksort.txt  Quicksort2048cores.cmd  Quicksort32768cores.cmd  Quicksort512cores.cmd  tmp.txt
schizoQuicksort/muc/: makefile
schizoQuicksort/muc/SchizoQS_vs_HypercubeQS/: BenchmarkMuc16384cores.cmd  BenchmarkMuc65536cores.cmd  BenchmarkMuc8192cores.cmd  Quicksort.txt  config08192HC.json  config08192S.json  (+3 more)
schizoQuicksort/src/: main.cpp
src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  CMakeLists.txt  CommTree.cpp  CommTree.h  CommTreeTest.cpp  Diffusion.cpp  Diffusion.h  DiffusionTest.cpp  FileIO.cpp  FileIO.h  FileIOTest.cpp  GeographerConfig.cmake.in  GraphUtils.cpp  GraphUtils.h  GraphUtilsTest.cpp  HaloPlanFns.cpp  HaloPlanFns.h  HierarchicalKMeans.cpp  HierarchicalKMeans.h  HilbertCurve.cpp  HilbertCurve.h  HilbertCurveTest.cpp  KMeans.cpp  KMeans.h  KMeansCoreset.cpp  KMeansCoreset.h  KMeansCoresetTest.cpp  KMeansTest.cpp  LocalRefinement.cpp  LocalRefinement.h  LocalRefinementTest.cpp  Mapping.cpp  Mapping.h  MappingTest.cpp  MeshGenerator.cpp  MeshGenerator.h  MeshGeneratorTest.cpp  Metrics.cpp  Metrics.h  (+44 more)
src/quadtree/: KDNodeEuclidean.h  KDTreeEuclidean.h  Point.h  QuadNodeCartesianEuclid.h  QuadNodePolarEuclid.h  QuadTreeCartesianEuclid.h  QuadTreePolarEuclid.h  SpatialCell.h  SpatialTree.h  instantiations.cpp
src/quadtree/test/: QuadTreeTest.cpp  QuadTreeTest.h
testing/: blockSizes.txt  blockSizes2w.txt  blockSizes_2w.txt  blockSizes_k4_w2.txt
tools/: CMakeLists.txt  Visualize_scai_tracing.ipynb  alya2metis.cpp  analysePEgraphs.ipynb  analyzePartition.cpp  coords2binary.cpp  createPEgraphs.py  distEdgeList2CSR.cpp  distEdgeList2nonDist.cpp  graphToHeatmap.cpp  solveLaplacianLamg.cpp  visualizeBlockGraphs.ipynb  visualizeGraphs.ipynb  visualizeMship.ipynb
tools/python-scripts/: create-multiconstraint-input.py
(+83 files in other folders)
